--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "app-rn1",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,18 +11,18 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.12",
     "@react-navigation/native-stack": "^6.8.0",
-    "expo": "~46.0.9",
-    "expo-localization": "~13.1.0",
-    "expo-status-bar": "~1.4.0",
+    "expo": "~54.0.10",
+    "expo-localization": "~17.0.7",
+    "expo-status-bar": "~3.0.8",
     "i18n-js": "^4.1.1",
     "install": "^0.13.0",
-    "react": "18.0.0",
-    "react-native": "0.69.9",
-    "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0"
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "babel-preset-expo": "^54.0.3"
   },
   "private": true
 }
